# OO-UnitTesting

./: .clang-format  .clang-tidy  .gitmodules  meson.build
inc/: header.h
src/: main.cpp  source.c  source.cpp
tests/: AllTests.cpp  testFile.cpp
tests/fakes/: MyClass_mocks.cpp  test_globals.cpp
tests/fakes/inc/: MyClass_mocks.h
